fix: rte/bubble-menu z-index

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   border-radius: 0px 0px 12px 12px;
   background: var(--color-bg-secondary);
   position: relative;
-  z-index: 2;
+  z-index: 999;
   transition:
     background-color 0.3s ease,
     color 0.3s ease;
